# libmp4tag

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_xcframework.sh
include/mp4tag/: module.modulemap  mp4tag.h  mp4tag_error.h  mp4tag_types.h
src/: mp4tag.c
src/io/: file_io.c  file_io.h
src/mp4/: mp4_atoms.c  mp4_atoms.h  mp4_parser.c  mp4_parser.h  mp4_tags.c  mp4_tags.h
src/util/: buffer.c  buffer.h  mp4_buffer_ext.h  string_util.c  string_util.h
tests/: CMakeLists.txt  test_mp4tag.c
